tests/baselines/reference/classWithOverloadImplementationOfWrongName2(strict=true).errors.txt
classWithOverloadImplementationOfWrongName2.ts(3,5): error TS2389: Function implementation name must be 'foo'.
classWithOverloadImplementationOfWrongName2.ts(3,9): error TS7006: Parameter 'x' implicitly has an 'any' type.
classWithOverloadImplementationOfWrongName2.ts(4,5): error TS2391: Function implementation is missing or not immediately following the declaration.
classWithOverloadImplementationOfWrongName2.ts(4,9): error TS7006: Parameter 'x' implicitly has an 'any' type.


==== classWithOverloadImplementationOfWrongName2.ts (4 errors) ====
    class C {
        foo(): string;
        bar(x): any { }
        ~~~
!!! error TS2389: Function implementation name must be 'foo'.
            ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
        foo(x): number;
        ~~~
!!! error TS2391: Function implementation is missing or not immediately following the declaration.
            ~
!!! error TS7006: Parameter 'x' implicitly has an 'any' type.
    }